fix the valid code